--- a/frontend/src/assets/styles/components/_header.scss
+++ b/frontend/src/assets/styles/components/_header.scss
@@ -1,6 +1,8 @@
-@use "../mixins" as mixins; 
+@use "../mixins" as mixins;
 
 .header {
+  max-width: 1200px;
+  margin: 0 auto; // Center header horizontally
   width: 100%;
   background-color: var(--color-primary);
   padding: calc(var(--spacing-unit) * 2);
@@ -8,6 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  min-height: 70px; // Ensures adequate header height
 
   &__logo {
     display: flex;
@@ -31,12 +34,8 @@
   }
 
   @keyframes rotate {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
   }
 
   /* Logo text container */
@@ -44,22 +43,23 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
+    text-align: left;
   }
 
   &__logo-main {
     font-family: var(--font-family-heading);
     font-size: var(--font-size-heading);
     font-weight: var(--font-weight-bold);
+    line-height: 1;
   }
 
-  /* Slogan styled in a signature font */
   &__logo-slogan {
     font-family: var(--font-family-signature);
     font-size: 1.2rem; 
     font-weight: var(--font-weight-regular);
     color: inherit;
-    text-align: center;
+    text-align: left;
+    line-height: 1;
   }
 
   &__mobile-toggle {
@@ -71,6 +71,7 @@
     display: flex;
     gap: calc(var(--spacing-unit) * 2);
     margin-left: calc(var(--spacing-unit) * 2);
+    align-items: center;
 
     a,
     .header__nav-btn {
@@ -79,7 +80,7 @@
       font-size: var(--font-size-base);
       padding: calc(var(--spacing-unit) * 0.75) calc(var(--spacing-unit) * 1.5);
       border-radius: 4px;
-      @include mixins.transition(background-color); 
+      @include mixins.transition(background-color);
 
       &:hover,
       &:focus {
@@ -106,11 +107,10 @@
     &__mobile-toggle {
       display: block;
     }
-
     &__nav {
       flex-direction: column;
       align-items: flex-end;
-      width: auto;
+      width: 100%;
       display: none;
 
       &.open {
@@ -120,7 +120,7 @@
       a,
       .header__nav-btn {
         text-align: right;
-        width: auto;
+        width: 100%;
       }
     }
   }
